# hook-sql

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: release.yml
src/hook_sql/: __init__.py  core.py  hook.py  manifest.py  uss.py
